[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/common/Background.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/common/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/game/Game.gd" type="Script" id=3]
[ext_resource path="res://scenes/common/Score.tscn" type="PackedScene" id=4]

[node name="Game" type="Node2D"]
script = ExtResource( 3 )
jump_velocity = 1585

[node name="Background" parent="." instance=ExtResource( 1 )]
camera_velocity = Vector2( -120, 0 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 80, 317 )

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="Score" parent="." instance=ExtResource( 4 )]
position = Vector2( 197, 51 )
z_index = 1

[connection signal="area_enterd" from="Background" to="." method="_on_Background_area_enterd"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
